/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.platform.android.instrumentation;

import "src/devtools/mobileharness/platform/android/instrumentation/result/proto/test_result.proto";
import "src/devtools/mobileharness/platform/android/instrumentation/result/proto/test_status.proto";

option java_package = 'com.google.devtools.mobileharness.platform.android.instrumentation.result.proto';
option java_outer_classname = "TestSuiteResultProto";
option java_multiple_files = true;

// TestExecutionResult is a summary of the results of running the tests.
message TestSuiteResult {
  // Indicates the metadata for test suite
  TestSuiteMetaData test_suite_meta_data = 1;

  // Indicates the status of the test suite and whether it passed, failed or was
  // skipped etc.
  TestStatus test_status = 2;

  // A collection of TestResult messages generated while running the test.
  repeated TestResult test_result = 3;
}

// Metadata for TestSuiteResult
message TestSuiteMetaData {
  // Name of the testSuite e.g. com.javatests.foo.bar
  string test_suite_name = 1;

  // Number of test cases scheduled to be run.
  int32 scheduled_test_case_count = 2;
}
